<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="goBack"
        android:text="@string/back"
        android:textColor="@android:color/black"
        android:background="@android:color/transparent"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/avt"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/avt"
        android:contentDescription="@string/todo_avt" />

    <ImageView
        android:id="@+id/vote"
        android:src = "@drawable/vote"
        android:layout_width="51dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="106dp"
        android:contentDescription="@string/todoo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="46dp"
        android:text="@string/dr_do_duy_chien"
        android:textSize = "16sp"
        />

    <TextView
        android:id="@+id/khoanhi"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="70dp"
        android:text="@string/khoa_nhi"
        android:textSize = "12sp"

        />

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"
            android:contentDescription="@string/button_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message"
            android:contentDescription="@string/button_image_message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot"
            android:contentDescription="@string/button_image_dot" />
    </LinearLayout>

    <TextView
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:text = "@string/about"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"/>

    <ImageView
        android:layout_width="362dp"
        android:layout_height="87dp"
        android:src="@drawable/about"
        android:layout_marginTop="165dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todooo" />
    
    <TextView
        android:layout_width="79dp"
        android:layout_height="33dp"
        android:text="@string/schedule"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp" />
    
    <TextView
        android:layout_width="79dp"
        android:layout_height="33dp"
        android:text="@string/chon_lich"
        android:layout_marginStart = "30dp"
        android:layout_marginTop="280dp"
        android:textSize = "18sp"
        android:textColor="@color/black" />
    
    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/about_a_doctor"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="362dp"
        android:layout_height="34dp"
        android:text="@string/introduce"
        android:layout_marginStart="30dp"
        android:layout_marginTop="370dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:text="@string/location"
        android:layout_marginStart="30dp"
        android:layout_marginTop="410dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <ImageView
        android:src = "@drawable/location"
        android:layout_width = "24dp"
        android:layout_height = "24dp"
        android:layout_marginStart = "30dp"
        android:layout_marginTop = "430dp"
        android:contentDescription="@string/location_image" />

    <TextView
        android:text="@string/location_r"
        android:layout_width = "147dp"
        android:layout_height = "34dp"
        android:layout_marginStart = "60dp"
        android:layout_marginTop = "430dp" />

    <ImageView
        android:src = "@drawable/hospital"
        android:layout_width = "24dp"
        android:layout_height = "24dp"
        android:layout_marginStart = "250dp"
        android:layout_marginTop = "430dp"
        android:contentDescription="@string/hospital_image" />

    <TextView
        android:text="@string/hospital"
        android:layout_width = "147dp"
        android:layout_height = "34dp"
        android:layout_marginStart = "280dp"
        android:layout_marginTop = "430dp" />

    <ImageView
        android:src = "@drawable/map"
        android:layout_width = "400dp"
        android:layout_height = "100dp"
        android:layout_marginStart = "30dp"
        android:layout_marginTop = "470dp"
        android:contentDescription="@string/map_image" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="30dp"
        app:chipSpacing="8dp"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17/07"
            android:background="@drawable/chip_selected"
            android:textColor="@color/chip_text_color"
            android:checked="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18/07"
            android:background="@drawable/chip_selected"
            android:textColor="@color/chip_text_color"
            android:checked="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="19/07"
            android:background="@drawable/chip_selected"
            android:textColor="@color/chip_text_color"
            android:checked="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_4"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20/07"
            android:background="@drawable/chip_selected"
            android:textColor="@color/chip_text_color"
            android:checked="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_5"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="21/07"
            android:background="@drawable/chip_selected"
            android:textColor="@color/chip_text_color"
            android:checked="false" />



    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:text="Make appointment"
        android:layout_width = "147dp"
        android:layout_height = "30dp"
        android:layout_marginStart = "30dp"
        android:layout_marginTop = "580dp" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="600dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/make_appointment"
            android:contentDescription="@string/button_image_message" />
    </LinearLayout>






</RelativeLayout>
