<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:onClick="goBack"
        android:text="@string/back"
        android:textColor="@android:color/black"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/avt"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/avt"
        android:contentDescription="@string/todo_avt" />

    <ImageView
        android:id="@+id/vote"
        android:src = "@drawable/vote"
        android:layout_width="51dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="106dp"
        android:contentDescription="@string/todoo" />

    <TextView
        android:id="@+id/doctor_name"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="46dp"
        android:text="@string/dr_do_duy_chien"
        android:textSize = "16sp"
        />

    <TextView
        android:id="@+id/doctor_major"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="70dp"
        android:text="@string/khoa_nhi"
        android:textSize = "12sp"

        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="124dp"
        android:src="@drawable/message"
        android:id="@+id/messageButton"
        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="174dp"
        android:src="@drawable/phone"
        android:id="@+id/phoneButton"
        />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_height="700dp"
        android:background="@color/gray_4" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:text = "@string/about"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:text="Bệnh nhân"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:text="Kinh nghiệm"
        android:layout_marginStart="145dp"
        android:layout_marginTop="160dp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:text="Đánh giá"
        android:layout_marginStart="285dp"
        android:layout_marginTop="160dp" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="190dp"
        android:background="@color/gray_3">

        <TextView
            android:id="@+id/count_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="150dp"
        android:layout_marginTop="190dp"
        android:background="@color/gray_3">

        <TextView
            android:id="@+id/count_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="270dp"
        android:layout_marginTop="190dp"
        android:background="@color/gray_3">

        <TextView
            android:id="@+id/doctor_rate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <TextView
        android:layout_width="79dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:text="@string/schedule" />

    <Button
        android:id="@+id/booking"
        android:layout_height="60dp"
        android:layout_width="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="280dp"
        android:text="Đặt lịch khám tại đây" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/about_a_doctor"
        android:layout_marginStart="30dp"
        android:layout_marginTop="420dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/about_doctor"
        android:layout_width="362dp"
        android:layout_height="34dp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="440dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:text="@string/location"
        android:layout_marginStart="30dp"
        android:layout_marginTop="480dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <ImageView
        android:src = "@drawable/location"
        android:layout_width = "24dp"
        android:layout_height = "24dp"
        android:layout_marginStart = "30dp"
        android:layout_marginTop = "515dp"
        android:contentDescription="@string/location_image" />

    <TextView
        android:id="@+id/address"

        android:layout_width = "147dp"
        android:layout_height = "34dp"
        android:layout_marginStart = "60dp"
        android:layout_marginTop = "515dp" />

    <ImageView
        android:src = "@drawable/hospital"
        android:layout_width = "24dp"
        android:layout_height = "24dp"
        android:layout_marginStart = "250dp"
        android:layout_marginTop = "515dp"
        android:contentDescription="@string/hospital_image" />

    <TextView
        android:id="@+id/hospital_name"

        android:layout_width = "147dp"
        android:layout_height = "34dp"
        android:layout_marginStart = "280dp"
        android:layout_marginTop = "515dp" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="540dp"
        android:contentDescription="@string/map_image"
        android:src="@drawable/map" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/dot_location"
        android:layout_marginTop="620dp"
        android:layout_marginStart="210dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="15dp"
        />

</RelativeLayout>
