<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_alignParentRight="true"
    android:layout_marginRight="15dp"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="15dp"
    android:padding="5dp"
    android:orientation="vertical">

    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/doctor"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="7dp"
        android:gravity="top"
        android:text="@string/doctor"
        android:textAppearance="@style/TextView.Primary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/majors"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/majors"
        android:textAppearance="@style/TextView.Secondary"
        android:gravity="top"
        android:singleLine="false"
        />

    <View
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/image_dr"
        android:layout_width="38.84dp"
        android:layout_height="39.84dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="13.16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11.16dp"
        android:background="@drawable/image_dr"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78">

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="top"
            android:text="@string/review"
            android:textAppearance="@style/TextView.Secondary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/icon_star"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="@drawable/icon_star"
            android:clipToOutline="true"
           />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rate"
            android:textAppearance="@style/TextView.Primary"
            android:textSize="15sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>