<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <View
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/noti_name"
        android:layout_width="147dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="7dp"
        android:gravity="top"
        android:text="@string/doctor"
        android:textAppearance="@style/doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/noti_major"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="34dp"
        android:gravity="top"
        android:text="@string/majors"
        android:textAppearance="@style/major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/image_dr"
        android:layout_width="38.84dp"
        android:layout_height="39.84dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13.16dp"
        android:layout_marginTop="11.16dp"
        android:background="@drawable/image_dr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/noti_review"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="top"
            android:text="@string/review"
            android:textAppearance="@style/TextView.Secondary"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="@drawable/icon_star"
            android:clipToOutline="true"
            />

        <TextView
            android:id="@+id/noti_rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="67dp">

        <View
            android:layout_width="14dp"
            android:layout_height="15dp"
            android:background="@drawable/icon_calendar"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/noti_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11 July"
            android:textAppearance="@style/TextView.Primary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="67dp">

        <View
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/icon_time"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/noti_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:00"
            android:textAppearance="@style/TextView.Primary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>